# stdcapture

./: CMakeLists.txt  LICENSE  README.md
include/stdcapture/: stdcapture.h
src/: stdcapture.cpp
src/test/: test_stdcapture.cpp
